syntax = "proto3";

import "google/protobuf/empty.proto";

package book;

option go_package = "bookpb";

message Book {
    int32 id = 1;
    string title = 2;
    string author = 3;
}

message CreateBookRequest {
    Book book = 1;
}

message CreateBookResponse {
    Book book = 1;
}

message GetBookRequest {
    int32 id = 1;
}

message GetBookResponse {
    Book book = 1;
}

message UpdateBookRequest {
    Book book = 1;
}

message UpdateBookResponse {
    Book book = 1;
}

message DeleteBookRequest {
    int32 id = 1;
}

message DeleteBookResponse {
    Book book = 1;
}

// message GetAllBooksRequest {}

message GetAllBooksResponse {
    repeated Book books = 1;
}

// get borrowing students - started
message Student {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
}

message GetBorrowingStudentsRequest {
    int32 book_id = 1;
}

message GetBorrowingStudentsResponse {
    repeated Student students = 1;
}
// get borrowing students - finished


service BookService {
    rpc CreateBook(CreateBookRequest) returns (CreateBookResponse){};
    rpc GetBook(GetBookRequest) returns (GetBookResponse){};
    rpc UpdateBook(UpdateBookRequest) returns (UpdateBookResponse){};
    rpc DeleteBook(DeleteBookRequest) returns (DeleteBookResponse){};

    rpc GetAllBooks(google.protobuf.Empty) returns (GetAllBooksResponse){};

    rpc GetBorrowingStudents(GetBorrowingStudentsRequest) returns (GetBorrowingStudentsResponse){};
}